# hc

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  REUSE.toml  llvm-sha.txt
.github/workflows/: build.yml  pre-commit.yml
docs/: langref.md
frontend/: CMakeLists.txt
frontend/include/hc/PyFront/: Import.hpp
frontend/lib/: Import.cpp
gpu-runtime/common/include/: offload_api.h
gpu-runtime/cuda-runtime/: CMakeLists.txt
gpu-runtime/cuda-runtime/src/: Runtime.cpp
gpu-runtime/hip-runtime/: CMakeLists.txt
gpu-runtime/hip-runtime/src/: Runtime.cpp
gpu-runtime/loader/: CMakeLists.txt
gpu-runtime/loader/src/: Loader.cpp  SharedLib.cpp  SharedLib.hpp
mlir/: CMakeLists.txt
mlir/include/hc/: InitHCDialects.hpp  InitHCPasses.hpp  Utils.hpp
mlir/include/hc/Dialect/: CMakeLists.txt
mlir/include/hc/Dialect/HKernel/IR/: CMakeLists.txt  HKernelOps.hpp  HKernelOps.td  HKernelOpsTypeInterfaces.td
mlir/include/hc/Dialect/PyAST/IR/: CMakeLists.txt  PyASTOps.hpp  PyASTOps.td
mlir/include/hc/Dialect/PyIR/IR/: CMakeLists.txt  PyIROps.hpp  PyIROps.td
mlir/include/hc/Dialect/Typing/IR/: CMakeLists.txt  TypingOps.hpp  TypingOps.td  TypingOpsInterfaces.hpp  TypingOpsInterfaces.td
mlir/include/hc/Dialect/Typing/Transforms/: Interpreter.hpp
mlir/include/hc/ExecutionEngine/: ExecutionEngine.hpp
mlir/include/hc/Pipelines/: BackendPipeline.hpp  FrontendPipeline.hpp  MiddleendPipeline.hpp
mlir/include/hc/Transforms/: CMakeLists.txt  ConvertPtrToLLVM.hpp  ModuleLinker.hpp  Passes.hpp  Passes.td
mlir/lib/Dialect/HKernel/IR/: HKernelOps.cpp
mlir/lib/Dialect/PyAST/IR/: PyASTOps.cpp
mlir/lib/Dialect/PyIR/IR/: PyIROps.cpp
mlir/lib/Dialect/Typing/IR/: TypingOps.cpp
mlir/lib/Dialect/Typing/Transforms/: Interpreter.cpp
mlir/lib/ExecutionEngine/: ExecutionEngine.cpp
mlir/lib/Pipelines/: BackendPipeline.cpp  FrontendPipeline.cpp  MiddleendPipeline.cpp
mlir/lib/Transforms/: ClenaupPySetVar.cpp  ConverPyFuncToKernel.cpp  ConvertPtrToLLVM.cpp  ConvertPyASTToIR.cpp  ConvertPyFuncToFunc.cpp  CreatePyWrapper.cpp  DecomposeHKOps.cpp  DecomposeMemrefs.cpp  DecomposePointers.cpp  DropTypeResolvers.cpp  ExpandSharedAllocs.cpp  ExpandTuple.cpp  GpuToGpuRuntime.cpp  GpuToNVVM.cpp  GpuToROCDL.cpp  LegalizeBoolMemrefs.cpp  LegalizeLLVMABI.cpp  LegalizeVectorOps.cpp  LowerHKernel.cpp  LowerScope.cpp  ModuleLinker.cpp  PyIRPromoteFuncsToStatic.cpp  PyTypeInference.cpp  ReconstructPySSA.cpp  ResolveSymbols.cpp  SelectPass.cpp  SimplifyAST.cpp  Utils.cpp
python/: CMakeLists.txt  setup.py
python/cpp/: CMakeLists.txt
python/cpp/compiler/: CMakeLists.txt
python/cpp/compiler/src/: CompilerFront.cpp  Context.cpp  Context.hpp  Dispatcher.cpp  DispatcherBase.cpp  DispatcherBase.hpp  PyModule.cpp  PyWrappers.cpp  TypingDispatcher.cpp  TypingPipeline.cpp
python/cpp/py-runtime/: CMakeLists.txt
python/cpp/py-runtime/src/: GpuRuntime.cpp  GpuRuntime.hpp  PyABI.cpp  PyABI.hpp  PyRuntime.cpp
python/cpp/shared/include/: PyRuntimeShared.hpp
python/cpp/src/: CompilerFront.cpp  CompilerFront.hpp  Context.cpp  Context.hpp  Dispatcher.cpp  Dispatcher.hpp  DispatcherBase.cpp  DispatcherBase.hpp  PyModule.cpp  PyWrappers.cpp  PyWrappers.hpp  TypingDispatcher.cpp  TypingDispatcher.hpp  TypingPipeline.cpp  TypingPipeline.hpp  Utils.cpp  Utils.hpp
python/hckernel/: __init__.py  bitcode_storage.py  compiler.py  convert_expr.py  dispatcher.py  indexing.py  kernel.py  kernel_api.py  kernel_sim.py  kernel_typing.py  mlir.py  py_runtime.py  settings.py  symbol_registry.py  typename.py  typing.py  utils.py
python/hckernel/tests/: test_e2e.py  test_examples.py  test_kernel_sim.py
python/ir/: typing.mlir
scripts/: core-env-linux.yml  core-env-win.yml  runlit.py
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/Dialect/HKernel/: ops.mlir
tests/Dialect/typing/: canonicalization.mlir
tests/Transforms/: convert-py-ast-to-ir.mlir  convert-py-func-to-kernel-func.mlir  convert-py-func-to-kernel.mlir  convert-pyir-to-kernel.mlir  create-py-wrapper.mlir  decompose-memrefs.mlir  decompose-pointers.mlir  expand-shared-allocs.mlir  expand-tuple.mlir  gpu-to-gpu-runtime.mlir  hkernel-convert-types.mlir  hkernel-decompose-ops.mlir  hkernel-lower-ops.mlir  hkernel-resolve-args.mlir  legalize-bool-memref.mlir  legalize-llvm-abi.mlir  lower-scope-sg.mlir  lower-scope-wg.mlir  ptr-to-llvm.mlir  pyapi-to-llvm.mlir  resolve-args.mlir  type-inference.mlir
tests/pyfront/: ast.py
tools/hc-opt/: CMakeLists.txt  Main.cpp
tools/pyfront/: CMakeLists.txt  Main.cpp
